<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Cabeçalho -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/black"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textHeader1"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:gravity="start"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textHeader2"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:gravity="start"/>
    </LinearLayout>

    <!-- ScrollView com conteúdo -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/red1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- LinearLayout Verde -->
            <LinearLayout
                android:id="@+id/student"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green1"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textTitleStudent"
                    android:textSize="22sp"
                    android:textColor="@color/green2"/>

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    android:hint="@string/hintNomeStudent"
                    android:layout_marginTop="8dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/textNomeStudent"
                    android:textSize="11sp"
                    android:textAlignment="center"
                    android:layout_marginTop="-10dp"
                    android:layout_height="wrap_content"/>
                <EditText
                    android:id="@+id/etClass"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/hintClassStudent"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:layout_marginTop="8dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/textClassStudent"
                    android:textSize="11sp"
                    android:textAlignment="center"
                    android:layout_marginTop="-10dp"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/etNote"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:imeOptions="actionDone"
                    android:hint="@string/hintNoteStudent"
                    android:inputType="numberDecimal"
                    android:layout_marginTop="8dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/textNoteStudent"
                    android:textSize="11sp"
                    android:textAlignment="center"
                    android:layout_marginTop="-10dp"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:id="@+id/etRecord"
                        android:layout_width="0dp"
                        android:textSize="14sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/textItems"/>

                    <Button
                        android:id="@+id/btnRecord"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:backgroundTint="@color/green2"
                        android:text="@string/buttonRecord"/>

                    <TextView
                        android:id="@+id/tvMessage"
                        android:layout_width="0dp"
                        android:textSize="14sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_marginStart="5dp"
                        android:gravity="start"
                        android:text="@string/textMessage"/>
                </LinearLayout>
            </LinearLayout>

            <!-- LinearLayout Azul -->
            <LinearLayout
                android:id="@+id/search"
                android:background="@color/red1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textTitleSearch"
                    android:textSize="22sp"
                    android:textColor="@color/red2"
                    android:paddingTop="5dp"/>

                <EditText
                    android:id="@+id/etNameSearch"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    android:hint="@string/hintNomeSearch"
                    android:layout_marginTop="8dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/textNomeSearch"
                    android:textSize="11sp"
                    android:textAlignment="center"
                    android:layout_marginTop="-10dp"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/etClassSearch"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    android:hint="@string/hintClassSearch"
                    android:layout_marginTop="8dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/textClassSearch"
                    android:textSize="11sp"
                    android:textAlignment="center"
                    android:layout_marginTop="-10dp"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">

                    <Button
                        android:id="@+id/btnSearch"
                        android:layout_marginTop="10dp"
                        android:textSize="12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/red2"
                        android:text="@string/buttonSearch"/>

                    <TextView
                        android:id="@+id/tvMessageSearch"
                        android:layout_width="match_parent"
                        android:textSize="16sp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:text="---"
                        android:gravity="start"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">

                    <TextView
                        android:id="@+id/tvAverage"
                        android:layout_width="wrap_content"
                        android:textSize="14sp"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/textAverage"/>

                    <TextView
                        android:id="@+id/tvStatus"
                        android:layout_width="wrap_content"
                        android:textSize="14sp"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/textStatus"
                        android:layout_marginStart="10dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <!-- Rodapé -->
    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/black"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textFooter1"
            android:textSize="14sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textFooter2"
            android:textSize="12sp"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</LinearLayout>
